<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:padding="20dp"
    android:gravity="center"
    tools:context="com.binli.homechef.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/chef_hat"
        android:drawablePadding="3dp"
        android:paddingStart="48dp"
        android:paddingEnd="45dp"
        android:fontFamily="@font/convergence"
        android:text="@string/title_text"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardElevation="6dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <TextView
                android:id="@+id/chefText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="21sp"
                android:layout_gravity="center"
                android:text="@string/redefiningChef" />


        </androidx.cardview.widget.CardView>





    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        android:text="@string/get_started_text"
        android:textColor="@color/colorAccent"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




</LinearLayout>